# hlog

./: CMakeLists.txt  LICENSE  README.md
include/: appenderI.h  formatterI.h  hlog.h  logger.h  logstream.h  serverity.h  utils.h
include/appender/: console_appender.h  file_appender.h
include/formatter/: line_formatter.h  table_formatter.h
test/: common_test.cpp
