CMAKE_MINIMUM_REQUIRED (VERSION 3.5)

PROJECT (hlog)


ADD_EXECUTABLE (common_test test/common_test)

SET (CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET (CMAKE_CXX_COMPILER clang)
SET (CMAKE_CXX_COMPILER clang++)

SET (CMAKE_BUILD_TYPE "Debug")
SET (CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET (CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
